--- a/style.css
+++ b/style.css
@@ -62,6 +62,7 @@ p {
 .rating:hover {
   color: white;
   background-color: hsl(216, 12%, 54%);
+  cursor: pointer;
 }
 
 .clicked {
@@ -79,6 +80,7 @@ button {
   border-radius: 50px;
   border: none;
   margin: 30px 0px 10px;
+  cursor: pointer;
 }
 
 button:hover {
